--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </div>
 
     <div id="character-bar">
+
       <!-- show characters names here -->
     </div>
 
@@ -18,9 +19,9 @@
         <img
           id="image"
           src="assets/dummy.gif"
-          alt="Character's Name"
+          alt="Character's Image"
         /><!-- display character image here -->
-        <h4>Total Votes: <span id="vote-count">Character's Votes</span></h4>
+        <h4>Total Votes: <span id="vote-count">0</span></h4>
         <form id="votes-form">
           <input type="text" placeholder="Enter Votes" id="votes" name="votes" />
           <input type="submit" value="Add Votes" />
